# dvc_pipeline

./: api.py  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  secret.env  server.py  test.ipynb
.dvc/: config
conf/: config.yaml
mlruns/0/: meta.yaml
models/: .gitignore  logistic_regression_model.pkl  predictor.pkl  random_forest_model.pkl
outputs/2025-05-08/21-18-15/.hydra/: hydra.yaml
outputs/2025-05-08/21-21-32/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-08/21-22-04/.hydra/: hydra.yaml
outputs/2025-05-08/21-24-01/.hydra/: hydra.yaml
outputs/2025-05-08/21-24-35/.hydra/: hydra.yaml
outputs/2025-05-08/21-25-00/.hydra/: hydra.yaml
outputs/2025-05-08/21-26-04/.hydra/: hydra.yaml
outputs/2025-05-08/21-30-22/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-08/21-32-23/.hydra/: hydra.yaml
outputs/2025-05-08/23-43-57/.hydra/: hydra.yaml
outputs/2025-05-09/02-18-31/.hydra/: hydra.yaml
outputs/2025-05-09/02-41-18/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-09/02-45-09/.hydra/: hydra.yaml
outputs/2025-05-09/02-49-23/.hydra/: hydra.yaml
outputs/2025-05-18/17-13-28/.hydra/: hydra.yaml
outputs/2025-05-18/17-14-00/.hydra/: hydra.yaml
src/: data_loader.py  pipeline.py  preprocessing.py  save_model.py  train_model.py
